2009-12-08  Marcus Brinkmann  <marcus@g10code.de>

	* assuan-socket.c (get_nonce): Cast buffer to unsigned.
	(_assuan_sock_connect) [HAVE_W32_SYSTEM]: Drop ctx argument from
	read_port_and_nonce invocation.
	* system.c (assuan_fdopen) [HAVE_W32_SYSTEM]: Fix typo in variable
	name.
	(__assuan_spawn) [HAVE_W32_SYSTEM]: Fix types of fd and fdp.  Use
	ASSUAN_INVALID_FD.  Add missing context argument to _assuan_free,
	and fix call to _assuan_w32_strerror.  Set errno on error.
	(__assuan_socketpair) [HAVE_W32_STRERROR]: Fix type of filedes
	argument.
	* assuan-pipe-connect.c (pipe_connect, assuan_pipe_connect,
	socketpair_connect) [HAVE_W32_SYSTEM]: Fix type of fd_child_list.
	* assuan-defs.h (_assuan_socketpair): Likewise for prototype.
	* assuan.h (assuan_fd_from_posix_fd): New static inline function.

2009-12-03  Marcus Brinkmann  <marcus@g10code.de>

	* assuan-logging.c: (log_cats): New static variable.
	(TEST_LOG_CAT): New macro.
	(_assuan_log_handler): Check log category.
	(assuan_set_assuan_log_stream): Check ASSUAN_DEBUG for logging
	categories.
	(assuan_set_log_stream): Call assuan_set_assuan_log_stream.

2009-12-02  Marcus Brinkmann  <marcus@g10code.de>

	* Makefile.am (common_sources): Remove assuan-client.c.
	* assuan-client.c: File removed.
	* assuan.h (ASSUAN_RESPONSE_ERROR, ASSUAN_RESPONSE_OK)
	(ASSUAN_RESPONSE_STATUS, ASSUAN_RESPONSE_INQUIRE)
	(ASSUAN_RESPONSE_STATUS): New macros.
	(assuan_response_t): New type.
	(assuan_client_read_response, assuan_client_parse_response): New
	prototypes.
	* libassuan.def, libassuan.vers: Add assuan_client_read_response,
	assuan_client_parse_response.
	* assuan-client.c (xtoi_1, xtoi_2, assuan_transact)
	(_assuan_read_from_server): Moved to ...
	* client.c: ... here, with updates to use new functions and types.
	Include <stdlib.h>.
	(assuan_client_read_response, assuan_client_parse_response): New
	functions.
	* assuan-defs.h (_assuan_read_from_server): Use assuan_response_t.